Performance Issue improve needed adding a Table Filter Param When table filter is added with null table name, match on column name when filter is checked, not when filter is added so that not all columns need to be loaded. Case: SVY-2061